--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
   "scripts": {
     "build": "tsc"
   },
+  "dependencies": {
+    "mdast-util-from-markdown": "^0.8.5",
+    "mdast-util-to-markdown": "^0.6.5",
+    "plantuml-pipe": "^1.3.5",
+    "string-replace-async": "^2.0.0",
+    "svgo": "^2.2.2"
+  },
   "devDependencies": {
     "@types/node": "^14.14.34",
-    "typescript": "^4.2.3"
+    "@types/svgo": "^2.0.0",
+    "typescript": "^4.2.3",
+    "unified": "^9.2.1"
   },
   "files": [
     "lib"
