chore: target node 14

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "remark-uml",
   "version": "0.1.0",
   "license": "MIT",
+  "type": "module",
   "main": "lib/index.js",
+  "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc"
